--- a/app/public/index.html
+++ b/app/public/index.html
@@ -20,14 +20,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Candy Drop</title>
-    <meta name="title" content="Candy Drop" />
+    <title>Timeless NFT</title>
+    <meta name="title" content="Timeless NFT" />
     <meta name="description" content="Mint a limited NFT drop on Solana." />
 
     <!-- Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://buildspace.so/" />
-    <meta property="og:title" content="Candy Drop" />
+    <meta property="og:title" content="Timeless NFT" />
     <meta
       property="og:description"
       content="Mint a limited NFT drop on Solana."
